# mchecksum

./: CMakeLists.txt  README  README.md
CMake/: CheckSSE42.c  MChecksumDetermineVersion.cmake  mchecksum-config-version.cmake.in  mchecksum-config.cmake.build.in  mchecksum-config.cmake.install.in  mchecksum.pc.in
Testing/: CMakeLists.txt  test.c  test_perf.c  test_simple.c
src/: CMakeLists.txt  mchecksum.c  mchecksum.h  mchecksum_config.h.in  mchecksum_crc16.c  mchecksum_crc16.h  mchecksum_crc32c.c  mchecksum_crc32c.h  mchecksum_crc64.c  mchecksum_crc64.h  mchecksum_error.h  mchecksum_plugin.h  mchecksum_private.h  mchecksum_zlib.c  mchecksum_zlib.h
